--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -55,12 +55,10 @@ kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  ├─ kvm_vm_ioctl_create_vcpu()       // 创建vcpu的ioctl
  |   ├─ kvm_arch_vcpu_create()   // 初始化kvm_vcpu_arch
  |   |   |─ kvm_mmu_create(vcpu);   // 创建mmu
- |   |   |   ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 创建mmu
- |   |   |   └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 创建mmu
+ |   |   |   ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 分配内存
+ |   |   |   └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 分配内存
  |   |   |─ kvm_init_mmu(vcpu, false);   // 初始化mmu
- |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 
-
-
+ |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 设置回调函数
 ```
 
 ## MMU的创建
@@ -261,7 +259,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 所谓初始化就是填充 `vcpu->arch.mmu` 结构体，里面有很多回调函数都会用到
 
-# EPT寻址过程
+# 虚拟机的物理内存组织方式
 
 先了解下KVM虚拟机的物理内存组织方式，众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
 
@@ -269,7 +267,21 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 ![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
 
+# EPT寻址过程
+
 下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
+
+```
+vmx_handle_exit()  // vmxexit的入口
+
+ ├─ kvm_vmx_exit_handlers[exit_reason](vcpu);      // 创建vcpu的ioctl
+ |   ├─ kvm_arch_vcpu_create()   // 初始化kvm_vcpu_arch
+ |   |   |─ kvm_mmu_create(vcpu);   // 创建mmu
+ |   |   |   ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 分配内存
+ |   |   |   └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 分配内存
+ |   |   |─ kvm_init_mmu(vcpu, false);   // 初始化mmu
+ |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 设置回调函数
+```
 
 **初始状态EPT页表为空**，当**客户机运行**时，其使用的**GVA转化成GPA**后，还需要CPU根据**GPA查找EPT**，从而**定位具体的HPA**，但是由于此时**EPT为空**，所以会引发**缺页中断**，发生**VM-exit**, 此时**CPU进入到根模式**，运行VMM（这里指KVM），进入`vmx_handle_exit`函数, 在KVM中定义了一个**异常处理数组**来处理**对应的VM-exit**
 
@@ -409,6 +421,93 @@ emulate:
 EXPORT_SYMBOL_GPL(kvm_mmu_page_fault);
 ```
 
+```cpp
+static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
+                                        u32 err, bool prefault)
+{
+#ifdef CONFIG_RETPOLINE
+        if (likely(vcpu->arch.mmu->page_fault == kvm_tdp_page_fault))
+                return kvm_tdp_page_fault(vcpu, cr2_or_gpa, err, prefault);
+#endif
+        return vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);
+}
+```
+
+这里就会调用上面初始化的`kvm_tdp_page_fault()`
+
+```cpp
+int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
+                       bool prefault)
+{
+        int max_level;
+
+        for (max_level = PT_MAX_HUGEPAGE_LEVEL;
+             max_level > PT_PAGE_TABLE_LEVEL;
+             max_level--) {
+                int page_num = KVM_PAGES_PER_HPAGE(max_level);
+                gfn_t base = (gpa >> PAGE_SHIFT) & ~(page_num - 1);
+
+                if (kvm_mtrr_check_gfn_range_consistency(vcpu, base, page_num))
+                        break;
+        }
+
+        return direct_page_fault(vcpu, gpa, error_code, prefault,
+                                 max_level, true);
+}
+```
+
+
+```cpp
+static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
+                             bool prefault, int max_level, bool is_tdp)
+{
+        bool write = error_code & PFERR_WRITE_MASK;
+        bool exec = error_code & PFERR_FETCH_MASK;
+        bool lpage_disallowed = exec && is_nx_huge_page_enabled();
+        bool map_writable;
+
+        gfn_t gfn = gpa >> PAGE_SHIFT;
+        unsigned long mmu_seq;
+        kvm_pfn_t pfn;
+        int r;
+
+        if (page_fault_handle_page_track(vcpu, error_code, gfn))
+                return RET_PF_EMULATE;
+
+        r = mmu_topup_memory_caches(vcpu);
+        if (r)
+                return r;
+
+        if (lpage_disallowed)
+                max_level = PT_PAGE_TABLE_LEVEL;
+
+        if (fast_page_fault(vcpu, gpa, error_code))
+                return RET_PF_RETRY;
+
+        mmu_seq = vcpu->kvm->mmu_notifier_seq;
+        smp_rmb();
+
+        if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
+                return RET_PF_RETRY;
+
+        if (handle_abnormal_pfn(vcpu, is_tdp ? 0 : gpa, gfn, pfn, ACC_ALL, &r))
+                return r;
+
+        r = RET_PF_RETRY;
+        spin_lock(&vcpu->kvm->mmu_lock);
+        if (mmu_notifier_retry(vcpu->kvm, mmu_seq))
+                goto out_unlock;
+        if (make_mmu_pages_available(vcpu) < 0)
+                goto out_unlock;
+        r = __direct_map(vcpu, gpa, write, map_writable, max_level, pfn,
+                         prefault, is_tdp && lpage_disallowed);
+
+out_unlock:
+        spin_unlock(&vcpu->kvm->mmu_lock);
+        kvm_release_pfn_clean(pfn);
+        return r;
+}
+```
 
 
 # 参考
