--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. EPT机制.md
@@ -273,14 +273,15 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 ```
 vmx_handle_exit()  // vmxexit的入口
-
- ├─ kvm_vmx_exit_handlers[exit_reason](vcpu);      // 创建vcpu的ioctl
- |   ├─ kvm_arch_vcpu_create()   // 初始化kvm_vcpu_arch
- |   |   |─ kvm_mmu_create(vcpu);   // 创建mmu
- |   |   |   ├─ alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);  // 分配内存
- |   |   |   └─ alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);   // 分配内存
- |   |   |─ kvm_init_mmu(vcpu, false);   // 初始化mmu
- |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 设置回调函数
+ ├─ kvm_vmx_exit_handlers[exit_reason](vcpu);      // 调用对应函数
+ |   ├─ handle_ept_violation()   // ept violation异常的处理
+ |   |   |─ exit_qualification = vmcs_readl(EXIT_QUALIFICATION);   // 读取exit_qualification字段
+ |   |   |─ gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);   // 读取虚拟机的物理地址
+ |   |   |─ error_code = XXXX;   // 拼凑error
+ |   |   |─ kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);   // 处理page fault异常
+ |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
+ |   |   |       └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
+ |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 分配内存
 ```
 
 **初始状态EPT页表为空**，当**客户机运行**时，其使用的**GVA转化成GPA**后，还需要CPU根据**GPA查找EPT**，从而**定位具体的HPA**，但是由于此时**EPT为空**，所以会引发**缺页中断**，发生**VM-exit**, 此时**CPU进入到根模式**，运行VMM（这里指KVM），进入`vmx_handle_exit`函数, 在KVM中定义了一个**异常处理数组**来处理**对应的VM-exit**
@@ -293,6 +294,8 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
     ......
 };
 ```
+
+注意: 内存虚拟化异常有这两类, 这里讨论第一种
 
 所以在发生EPT violation的时候，根据`EXIT_REASON_EPT_VIOLATION`走到handle_ept_violation函数, KVM中会执行`handle_ept_violation`：
 
