--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
@@ -266,7 +266,7 @@ EXPORT_SYMBOL_GPL(__kvm_set_memory_region);
 
 check_memory_region_flags检查`mem->flags`是否合法，而当前flag也就使用了两位，`KVM_MEM_LOG_DIRTY_PAGES`和`KVM_MEM_READONLY`, 从qemu传过来的只能是`KVM_MEM_LOG_DIRTY_PAGES`
 
-`id_to_memslot`则是根据**qemu的内存槽号i**得到**kvm结构下的内存槽号**，转换关系来自`id_to_index`数组，那映射关系怎么来的，映射关系是**一一对应**的，在kvm_create_vm虚拟机创建过程中，`kvm_init_memslots_id`初始化对应关系，即`slots->id_to_index[i] = slots->memslots[i].id = i`，当前映射是没有意义的，估计是为了后续扩展而存在的。
+`id_to_memslot`则是根据**qemu的内存槽号i**得到**kvm结构下的内存槽号**，转换关系来自`id_to_index`数组，那映射关系怎么来的，映射关系是**一一对应**的，在下面会看到映射关系的建立.
 
 ```cpp
 static inline
@@ -582,10 +582,13 @@ static void update_memslots(struct kvm_memslots *slots,
                  * its index accordingly.
                  */
                 slots->memslots[i] = *memslot;
+                // 建立映射关系
                 slots->id_to_index[memslot->id] = i;
         }
 }
 ```
+
+在新建一个`kvm_memory_slot`时, 会建立qemu内存条和kvm, 即`slots->id_to_index[i] = slots->memslots[i].id = i`
 
 ```cpp
 void kvm_arch_commit_memory_region(struct kvm *kvm,
