--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -41,7 +41,39 @@ kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slo
 
 获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现, 下面有具体代码.
 
-kvm->memslots结构在创建虚拟机时被创建. `kvm_create_vm`
+kvm->memslots结构在创建虚拟机时被创建. `kvm_create_vm`, 而
+
+```cpp
+static struct kvm *kvm_create_vm(unsigned long type)
+{
+        ...
+        for (i = 0; i < KVM_ADDRESS_SPACE_NUM; i++) {
+                struct kvm_memslots *slots = kvm_alloc_memslots();
+
+                if (!slots)
+                        goto out_err_no_arch_destroy_vm;
+                /* Generations must be different for each address space. */
+                slots->generation = i;
+                rcu_assign_pointer(kvm->memslots[i], slots);
+        }
+        ...
+}
+
+static struct kvm_memslots *kvm_alloc_memslots(void)
+{
+        int i;
+        struct kvm_memslots *slots;
+
+        slots = kvzalloc(sizeof(struct kvm_memslots), GFP_KERNEL_ACCOUNT);
+        if (!slots)
+                return NULL;
+        // 这里并没有建立, 而是在虚拟机物理内存注册时候建立
+        for (i = 0; i < KVM_MEM_SLOTS_NUM; i++)
+                slots->id_to_index[i] = -1;
+
+        return slots;
+}
+```
 
 # 3. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系
 
