--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -1,4 +1,17 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. kvm中与内存有关的成员](#1-kvm中与内存有关的成员)
+- [2. kvm_memslots: 虚拟机所有slot信息](#2-kvm_memslots-虚拟机所有slot信息)
+- [3. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系](#3-kvm_mem_slot-结构体-一个代表一段空间-虚拟机gpa到主机hva的映射关系)
+- [4. kvm_mmu 结构体:](#4-kvm_mmu-结构体)
+  - [4.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系](#41-与kvm_vcpu-kvm_vcpu_arch之间的关系)
+  - [4.2. kvm_mmu 定义: mmu的回调函数](#42-kvm_mmu-定义-mmu的回调函数)
+
+<!-- /code_chunk_output -->
+
 
 # 1. kvm中与内存有关的成员
 
@@ -31,6 +44,7 @@ struct kvm_memslots {
         short id_to_index[KVM_MEM_SLOTS_NUM];
         atomic_t lru_slot;
         int used_slots;
+        // 所有插槽
         struct kvm_memory_slot memslots[];
 };
 ```
@@ -39,9 +53,9 @@ kvm_memslots结构体是`kvm_mem_slot`的封装，其中包含一个`kvm_mem_slo
 
 `kvm_mem_slot`是kvm内存管理相关主要数据结构，用来表示**虚拟机GPA**和**主机HVA**之间的**映射关系**，一个`kvm_mem_slot`表示一段**内存区域(slot)的映射关系**.
 
-获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现, 下面有具体代码.
+获取某一个`kvm_memory_slot`, 通过`id_to_memslot(struct kvm_memslots *slots, int id)`实现, `虚拟机物理内存注册`有**具体代码**.
 
-kvm->memslots结构在创建虚拟机时被创建. `kvm_create_vm`, 而
+`kvm->memslots`结构在创建虚拟机时被创建. `kvm_create_vm`, 而插槽ID`slot id`和其索引index是在`id_to_index`中维护, 即`slots->id_to_index[i] = slots->memslots[i].id = i`, 而这个映射关系是**新加一个内存条**(即虚拟机物理内存注册)时候建立的.
 
 ```cpp
 static struct kvm *kvm_create_vm(unsigned long type)
@@ -128,6 +142,8 @@ struct kvm_memory_slot {
 };
 ```
 
+虚拟机线性地址被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说每一段内存区间都必须有独立的作用。一般来说Qemu会对RAM、IO memory、High memory等分别注册若干个memslot
+
 至于`kvm_userspace_memory_region`可以看qemu部分
 
 # 4. kvm_mmu 结构体:
@@ -211,7 +227,7 @@ static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
 
 
 
-## kvm_mmu 定义: mmu的回调函数
+## 4.2. kvm_mmu 定义: mmu的回调函数
 
 ```cpp
 /*
