--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -28,6 +28,8 @@ struct kvm {
         struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
 ```
 
+其中`address_space_id = mem->slot >> 16;`, 详细见`虚拟机物理内存注册`.
+
 # 2. kvm_memslots: 虚拟机所有slot信息
 
 一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
