--- a/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
@@ -122,7 +122,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
         r = check_memory_region_flags(mem);
         if (r)
                 return r;
-        // address_space ID = slot编号右移4位
+        // address_space ID = slot编号右移16位
         as_id = mem->slot >> 16;
         // slot编号
         id = (u16)mem->slot;
@@ -152,7 +152,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
          * to free its resources and for arch specific behavior.
          */
         // 根据 kvm_userspace_memory_region->slot(qemu的内存槽号) 得到 kvm_mem_slot(kvm的内存槽号) 结构，该结构从 kvm->memslots 获取
-        // 完全拷贝了一份到tmp
+        // 根据id从kvm_memslots完全拷贝了一份kvm_mem_slot到tmp, 当然可能找不到
         tmp = id_to_memslot(__kvm_memslots(kvm, as_id), id);
         if (tmp) {
                 old = *tmp;
@@ -341,7 +341,7 @@ static int kvm_set_memslot(struct kvm *kvm,
         slots = kvm_dup_memslots(__kvm_memslots(kvm, as_id), change);
         if (!slots)
                 return -ENOMEM;
-        // 如果删除或move内存区域
+        // 如果删除或move内存区域, 额外的处理
         if (change == KVM_MR_DELETE || change == KVM_MR_MOVE) {
                 /*
                  * Note, the INVALID flag needs to be in the appropriate entry
@@ -371,7 +371,7 @@ static int kvm_set_memslot(struct kvm *kvm,
                 // 
                 kvm_arch_flush_shadow_memslot(kvm, slot);
         }
-        // 对于新建/move的, 初始化kvm_memory_slot的arch部分
+        // 初始化kvm_memory_slot的arch部分
         r = kvm_arch_prepare_memory_region(kvm, new, mem, change);
         if (r)
                 goto out_slots;
