--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
@@ -165,15 +165,17 @@ int __kvm_set_memory_region(struct kvm *kvm,
         if (!mem->memory_size)
                 // 最终还是会调用 kvm_set_memslot
                 return kvm_delete_memslot(kvm, mem, &old, as_id);
-        
+
+        // 再往下, 就意味着要么是new要么是move
         // 设置新的 kvm_memory_slot
         new.id = id;
         // 内存区域起始位置在Guest物理地址空间中的页框号
         new.base_gfn = mem->guest_phys_addr >> PAGE_SHIFT;
         // 内存区域大小转换为page单位
         new.npages = mem->memory_size >> PAGE_SHIFT;
+        // 标志
         new.flags = mem->flags;
-        // 主机虚拟地址
+        // 主机虚拟地址, HVA
         new.userspace_addr = mem->userspace_addr;
 
         if (new.npages > KVM_MEM_MAX_NR_PAGES)
@@ -224,7 +226,7 @@ int __kvm_set_memory_region(struct kvm *kvm,
                 /* Check for overlaps */
                 // 检查已经存在的memslots中是否重叠, 有的话直接返回-EEXIST
                 kvm_for_each_memslot(tmp, __kvm_memslots(kvm, as_id)) {
-                        // 当前要加入的slot, 不管, 直接跳过
+                        // new/move的id对应的原有slot, 不管, 直接跳过
                         if (tmp->id == id)
                                 continue;
                         // new_end > slot_base && new_base < slot_end，说明已经有覆盖该段内存了
