--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
@@ -221,12 +221,12 @@ int __kvm_set_memory_region(struct kvm *kvm,
                 // 将原有slot的arch相关信息全部复制给新的slot
                 memcpy(&new.arch, &old.arch, sizeof(new.arch));
         }
-        // 对于创建或move, 检查现有的 memslots 重叠
+        // 对于创建或move, 检查现有的重叠
         if ((change == KVM_MR_CREATE) || (change == KVM_MR_MOVE)) {
                 /* Check for overlaps */
-                // 检查已经存在的memslots中是否重叠, 有的话直接返回-EEXIST
+                // 检查已经存在所有kvm_memory_slot和新的slot是否地址重叠, 有的话直接返回-EEXIST
                 kvm_for_each_memslot(tmp, __kvm_memslots(kvm, as_id)) {
-                        // new/move的id对应的原有slot, 不管, 直接跳过
+                        // new/move的id对应的原有slot, 因为原有的要删除, 所以直接跳过
                         if (tmp->id == id)
                                 continue;
                         // new_end > slot_base && new_base < slot_end，说明已经有覆盖该段内存了
@@ -317,17 +317,26 @@ static int kvm_delete_memslot(struct kvm *kvm,
         r = kvm_set_memslot(kvm, mem, old, &new, as_id, KVM_MR_DELETE);
         if (r)
                 return r;
-        // 释放旧slot, 会调用
-        // kvm_destroy_dirty_bitmap(): 释放dirty bitmap
-        // 释放arch信息
+        // 释放old的堆空间
         kvm_free_memslot(kvm, old);
         return 0;
+}
+
+static void kvm_free_memslot(struct kvm *kvm, struct kvm_memory_slot *slot)
+{
+        // 释放dirty bitmap结构占用的内存
+        kvm_destroy_dirty_bitmap(slot);
+        // 释放arch数据结构占用的内存
+        kvm_arch_free_memslot(kvm, slot);
+
+        slot->flags = 0;
+        slot->npages = 0;
 }
 ```
 
 ### 3.2.1. kvm_set_memslot(): 最终调用函数
 
-最终调用`kvm_set_memslot()`
+无论是删除、创建、修改, 最终都会调用`kvm_set_memslot()`
 
 ```cpp
 static int kvm_set_memslot(struct kvm *kvm,
