--- a/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
@@ -18,11 +18,9 @@ kvm虚拟机实际运行于`qemu-kvm`的**进程上下文**中，因此，需要
 
 **虚拟机的物理地址空间**实际也是**不连续**的，分成**不同的内存区域**(slot)，因为物理地址空间中通常还包括**BIOS**、**MMIO**、**显存**、**ISA保留**等部分, 也就是说**每一段内存区间**都必须有**独立的作用**。
 
-qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设置内存**。主要建立**guest物理地址空间**中的内存区域与**qemu-kvm虚拟地址空间中的内存区域**的映射，从而建立其从**GVA到HVA的对应关系**，该**对应关系**主要通过`kvm_mem_slot`结构体保存，所以实质为设置`kvm_mem_slot`结构体, 并。
+qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设置内存**。主要建立**guest物理地址空间**中的内存区域与**qemu-kvm虚拟地址空间中的内存区域**的映射，从而建立其从**GVA到HVA的对应关系**，该**对应关系**主要通过`kvm_mem_slot`结构体保存，所以实质为设置`kvm_mem_slot`结构体, 并关联到`kvm->memslots->memslots[slots->used_slots++]` , 这个是虚拟机全局的。
 
 本文简介ioctl vm指令`KVM_SET_USER_MEMORY_REGION`在内核中的执行流程，qemu-kvm用户态部分暂不包括。
-
-本质是创建并填充了一个临时`kvm_memslots`结构，并把其赋值给`kvm->memslots`（虚拟机全局的）。
 
 ![2020-03-20-10-58-36.png](./images/2020-03-20-10-58-36.png)
 
