--- a/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 虚拟机物理内存注册.md
@@ -515,7 +515,7 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
                 // 一级页表所需的pages数目
                 lpages = gfn_to_index(slot->base_gfn + npages - 1,
                                       slot->base_gfn, level) + 1;
-
+                // rmap, 反向映射结构
                 slot->arch.rmap[i] =
                         kvcalloc(lpages, sizeof(*slot->arch.rmap[i]),
                                  GFP_KERNEL_ACCOUNT);
@@ -523,7 +523,7 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
                         goto out_free;
                 if (i == 0)
                         continue;
-
+                // Large page结构（如2MB、1GB大小页面）
                 linfo = kvcalloc(lpages, sizeof(*linfo), GFP_KERNEL_ACCOUNT);
                 if (!linfo)
                         goto out_free;
@@ -566,7 +566,7 @@ out_free:
 }
 ```
 
-如果是新插入内存条或move，`kvm_alloc_memslot_metadata`函数，里面主要是一个循环，`KVM_NR_PAGE_SIZES`是**分页的级数**，此处是**3**，第一次循环，`lpages = gfn_to_index(slot->base_gfn + npages - 1,slot->base_gfn, level) + 1`，lpages就是**一级页表**所需要的**page数**，大致是`npages>>1*9`,然后为`slot->arch.rmap[i]`申请了内存空间，此处可以猜想，**rmap就是一级页表**了，继续看，**lpages**约为`npages>>1*9`,此处又多为**lpage_info**申请了同等空间，然后对`lpage_info`初始化赋值，现在看不到lpage_info的具体作用，看到后再补上。整体上看`kvm_alloc_memslot_metadata`做了一个**3级的软件页表**。
+如果是新插入内存条或move，`kvm_alloc_memslot_metadata`函数，里面主要是一个循环，`KVM_NR_PAGE_SIZES`是**分页的级数**，此处是**3**，第一次循环，`lpages = gfn_to_index(slot->base_gfn + npages - 1,slot->base_gfn, level) + 1`，lpages就是**一级页表**所需要的**page数**，大致是`npages>>1*9`,然后为`slot->arch.rmap[i]`申请了内存空间，此处可以猜想，**rmap就是一级页表**了，继续看，**lpages**约为`npages>>1*9`, 此处又多为**lpage_info**申请了同等空间，然后对`lpage_info`初始化赋值，现在看不到lpage_info的具体作用，看到后再补上。整体上看`kvm_alloc_memslot_metadata`做了一个**3级的软件页表**。
 
 ```cpp
 static void update_memslots(struct kvm_memslots *slots,
