--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1,6 +1,20 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-# 背景
+<!-- code_chunk_output -->
+
+- [1. 背景](#1-背景)
+- [2. EPT地址转换机制](#2-ept地址转换机制)
+- [3. MMU初始化](#3-mmu初始化)
+  - [3.1. MMU的创建](#31-mmu的创建)
+  - [3.2. MMU的初始化: 主要是回调函数初始化](#32-mmu的初始化-主要是回调函数初始化)
+- [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
+- [5. EPT寻址过程](#5-ept寻址过程)
+- [6. 参考](#6-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 背景
 
 在虚拟化环境下，intel CPU在处理器级别加入了对内存虚拟化的支持。即扩展页表EPT，而AMD也有类似的成为NPT。在此之前，内存虚拟化使用的一个重要技术为影子页表。
 
@@ -10,7 +24,7 @@
 
 内容第一部分根据intel手册分析EPT地址转换机制；第二部分借助于KVM源代码分析EPT构建过程。
 
-# EPT地址转换机制
+# 2. EPT地址转换机制
 
 具体见`<系统虚拟化/处理器虚拟化技术>`, 当然最权威是Intel手册
 
@@ -24,7 +38,7 @@
 
 ![2020-03-17-16-14-17.png](./images/2020-03-17-16-14-17.png)
 
-1、其实这里我们只需要知道PML4 entry的12-51位记录下一级页表的地址，而这40位肯定是用不完的，根据CPU的架构，采取不同的位数，具体如下：
+1、其实这里我们只需要知道PML4 entry的`12-51`位记录下一级页表的地址，而这40位肯定是用不完的，根据CPU的架构，采取不同的位数，具体如下：
 
 在Intel中使用MAXPHYADDR来表示最大的物理地址，我们可以通过CPUID的指令来获得处理支持的最大物理地址，然而这已经不在此次的讨论范围之内，我们需要知道的只是：
 当MAXPHYADDR 为36位，在Intel平台的桌面处理器上普遍实现了36位的最高物理地址值，也就是我们普通的个人计算机，可寻址64G空间；
@@ -32,9 +46,9 @@
 当MAXPHYADDR为52位，这是x64体系结构描述最高实现值，目前尚未有处理器实现。
 
 而对下级表的物理地址的存储4K页面寻址遵循如下规则：
-① 当MAXPHYADDR为52位时，上一级table entry的12~51位提供下一级table物理基地址的高40位，低12位补零，达到基地址在4K边界对齐；
-② 当MAXPHYADDR为40位时，上一级table entry的12~39位提供下一级table物理基地址的高28位，此时40~51是保留位，必须置0，低12位补零，达到基地址在4K边界对齐；
-③ 当MAXPHYADDR为36位时，上一级table entry的12~35位提供下一级table物理基地址的高24位，此时36~51是保留位，必须置0，低12位补零，达到基地址在4K边界对齐。
+① 当MAXPHYADDR为52位时，上一级table entry的`12~51`位提供下一级table物理基地址的高40位，低12位补零，达到基地址在4K边界对齐；
+② 当MAXPHYADDR为40位时，上一级table entry的`12~39`位提供下一级table物理基地址的高28位，此时`40~51`是保留位，必须置0，低12位补零，达到基地址在4K边界对齐；
+③ 当MAXPHYADDR为36位时，上一级table entry的`12~35`位提供下一级table物理基地址的高24位，此时`36~51`是保留位，必须置0，低12位补零，达到基地址在4K边界对齐。
 
 而MAXPHYADDR为36位正是普通32位机的PAE模式。
 
@@ -46,7 +60,7 @@
 
 PDE的12-51位指向一个4K物理页面，最后根据客户物理地址的最低12位作为偏移，定位到具体的物理地址。
 
-# MMU初始化
+# 3. MMU初始化
 
 KVM在**vcpu创建时**创建和初始化MMU，所以说KVM的**MMU**是**每个VCPU独有的**（但是有一些是共享的内容，后面会说到）。
 
@@ -61,7 +75,7 @@ kvm_vm_ioctl()  // 虚拟机vm的ioctl入口
  |   |   |   ├─ init_kvm_tdp_mmu(vcpu);  // 设置回调函数
 ```
 
-## MMU的创建
+## 3.1. MMU的创建
 
 MMU的创建在`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_mmu_create()`
 
@@ -177,7 +191,7 @@ void kvm_configure_mmu(bool enable_tdp, int tdp_page_level)
 EXPORT_SYMBOL_GPL(kvm_configure_mmu);
 ```
 
-## MMU的初始化: 主要是回调函数初始化
+## 3.2. MMU的初始化: 主要是回调函数初始化
 
 `kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_init_mmu()`:
 
@@ -259,7 +273,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 所谓初始化就是填充 `vcpu->arch.mmu` 结构体，里面有很多回调函数都会用到
 
-# 虚拟机的物理内存组织方式
+# 4. 虚拟机的物理内存组织方式
 
 先了解下KVM虚拟机的物理内存组织方式，众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
 
@@ -267,7 +281,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 ![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
 
-# EPT寻址过程
+# 5. EPT寻址过程
 
 下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
 
@@ -513,6 +527,6 @@ out_unlock:
 ```
 
 
-# 参考
+# 6. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
