--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -22,10 +22,11 @@
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新](#5-memory_listener_update_region-新flatrange的更新)
   - [5.1. kvm_set_phys_mem(): 修改内核内存](#51-kvm_set_phys_mem-修改内核内存)
-    - [属性检查](#属性检查)
-    - [kvm_align_section(): 得到section/fr的起始地址和大小](#kvm_align_section-得到sectionfr的起始地址和大小)
-    - [计算该section/fr对应的主机虚拟机地址(HVA)](#计算该sectionfr对应的主机虚拟机地址hva)
-    - [kvm_set_user_memory_region(): 转化为slot然后添加](#kvm_set_user_memory_region-转化为slot然后添加)
+    - [5.1.1. 属性检查](#511-属性检查)
+    - [5.1.2. kvm_align_section(): 得到section/fr的起始地址和大小](#512-kvm_align_section-得到sectionfr的起始地址和大小)
+    - [5.1.3. 计算该section/fr对应的主机虚拟机地址(HVA)](#513-计算该sectionfr对应的主机虚拟机地址hva)
+    - [5.1.4. kvm_set_user_memory_region(): 转化为slot然后注册到KVM](#514-kvm_set_user_memory_region-转化为slot然后注册到kvm)
+- [MMIO退出的处理](#mmio退出的处理)
 - [6. 总结](#6-总结)
 - [7. 参考](#7-参考)
 
@@ -1685,13 +1686,13 @@ out:
 }
 ```
 
-### 属性检查
+### 5.1.1. 属性检查
 
 获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
 如果对应的MR关联的内存并**不是作为ram存在**，就要进行额外的验证。这种情况如果**writeable**允许写操作或者**kvm不支持只读内存**，那么**直接返回**。
 
-### kvm_align_section(): 得到section/fr的起始地址和大小
+### 5.1.2. kvm_align_section(): 得到section/fr的起始地址和大小
 
 然后获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作。
 
@@ -1726,7 +1727,7 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
 }
 ```
 
-### 计算该section/fr对应的主机虚拟机地址(HVA)
+### 5.1.3. 计算该section/fr对应的主机虚拟机地址(HVA)
 
 再计算HVA, 主机虚拟地址,
 
@@ -1759,7 +1760,7 @@ void *memory_region_get_ram_ptr(MemoryRegion *mr)
 }
 ```
 
-### kvm_set_user_memory_region(): 转化为slot然后添加
+### 5.1.4. kvm_set_user_memory_region(): 转化为slot然后注册到KVM
 
 接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。
 
@@ -1946,6 +1947,20 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 可以看到该函数实现也并不复杂，使用了一个`kvm_userspace_memory_region`对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是**只读的mem**, 需要**调用两次**kvm_vm_ioctl，第一次设置mem的size为0. 
 
 至于为何这么做，可以参考KVM端说明, KVM接收端在`kvm_vm_ioctl()`函数中.
+
+# MMIO退出的处理
+
+由于 mmio 导致的退出, `kvm_cpu_exec --> case KVM_EXIT_MMIO --> address_spaces_rw --> address_space_rw --> io_mem_write`
+
+```cpp
+int kvm_cpu_exec(CPUState *cpu)
+{
+    ......
+    
+    ......
+}
+```
+
 
 # 6. 总结
 
