--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -6,6 +6,7 @@
 - [1. 背景](#1-背景)
 - [2. EPT地址转换机制](#2-ept地址转换机制)
 - [3. MMU初始化](#3-mmu初始化)
+  - [](#)
   - [3.1. MMU的创建](#31-mmu的创建)
   - [3.2. MMU的初始化: 主要是回调函数初始化](#32-mmu的初始化-主要是回调函数初始化)
 - [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
@@ -61,6 +62,16 @@
 PDE的12-51位指向一个4K物理页面，最后根据客户物理地址的最低12位作为偏移，定位到具体的物理地址。
 
 # 3. MMU初始化
+
+## 
+
+```cpp
+vmx_init()                               // 初始化入口
+ ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
+ |   ├─ kvm_arch_init()                  // 架构相关初始化
+ |   |   ├─kvm_mmu_module_init()         // mmu模块初始化
+ |   |   ├─kvm_mmu_set_mask_ptes()       // shadow pte mask设置
+```
 
 KVM在**vcpu创建时**创建和初始化MMU，所以说KVM的**MMU**是**每个VCPU独有的**（但是有一些是共享的内容，后面会说到）。
 
