--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1956,8 +1956,64 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 int kvm_cpu_exec(CPUState *cpu)
 {
     ......
-    
+    do {
+        run_ret = kvm_vcpu_ioctl(cpu, KVM_RUN, 0);
+        attrs = kvm_arch_post_run(cpu, run);
+        switch (run->exit_reason) {
+            case KVM_EXIT_MMIO:
+                address_space_rw(&address_space_memory,
+                                run->mmio.phys_addr, attrs,
+                                run->mmio.data,
+                                run->mmio.len,
+                                run->mmio.is_write);
+        }
+    }
     ......
+}
+```
+
+```cpp
+MemTxResult address_space_rw(AddressSpace *as, hwaddr addr, MemTxAttrs attrs,
+                             uint8_t *buf, hwaddr len, bool is_write)
+{
+    if (is_write) {
+        return address_space_write(as, addr, attrs, buf, len);
+    } else {
+        return address_space_read_full(as, addr, attrs, buf, len);
+    }
+}
+```
+
+```cpp
+MemTxResult address_space_read_full(AddressSpace *as, hwaddr addr,
+                                    MemTxAttrs attrs, uint8_t *buf, hwaddr len)
+{
+    MemTxResult result = MEMTX_OK;
+    FlatView *fv;
+
+    if (len > 0) {
+        RCU_READ_LOCK_GUARD();
+        fv = address_space_to_flatview(as);
+        result = flatview_read(fv, addr, attrs, buf, len);
+    }
+
+    return result;
+}
+
+MemTxResult address_space_write(AddressSpace *as, hwaddr addr,
+                                MemTxAttrs attrs,
+                                const uint8_t *buf, hwaddr len)
+{
+    MemTxResult result = MEMTX_OK;
+    FlatView *fv;
+
+    if (len > 0) {
+        RCU_READ_LOCK_GUARD();
+        fv = address_space_to_flatview(as);
+        result = flatview_write(fv, addr, attrs, buf, len);
+    }
+
+    return result;
 }
 ```
 
