--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -98,7 +98,9 @@ static struct kvm_memslots *kvm_alloc_memslots(void)
 /* KVM Hugepage definitions for x86 */
 enum {
         PT_PAGE_TABLE_LEVEL   = 1,
+        // 2M大页(2^20), 页面的起始地址在 页目录项(PDE) 中
         PT_DIRECTORY_LEVEL    = 2,
+        // 1G大页(2^30), 页面的起始地址在 页目录指针项(PDPE) 中
         PT_PDPE_LEVEL         = 3,
         /* set max level to the biggest one */
         PT_MAX_HUGEPAGE_LEVEL = PT_PDPE_LEVEL,
