--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -140,7 +140,7 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 ![2020-02-24-23-39-43.png](./images/2020-02-24-23-39-43.png)
 
-对于 EPT 能力, bit 0 为 1 时, 允许在 EPT 页表表项里的 `bits 2:0` 使用 100b(execute-only页)属性. bit 6为 1 时, 表明支持 4 级页表结构. bit 16为1时支持使用 2M 页, bit 17为1时支持使用 1G 页. 最后, bit 21 为 1 时支持在页表项里使用 dirty 标志.
+对于 EPT 能力, `bit 0` 为 1 时, 允许在 EPT 页表表项里的 `bits 2:0` 使用 100b(execute-only页)属性. `bit 6`为 1 时, 表明支持 **4 级页表结构**. `bit 16`为1时**支持使用 2M 页**, `bit 17`为1时**支持使用 1G 页**. 最后, `bit 21` 为 1 时支持在**页表项**里使用 **dirty 标志**.
 
 bit 8为 1 时, 允许在 EPTP 字段的 bits 2:0 里设为UC类型(值为0), 而bit 14为1时, 允许在 EPTP 的bits 2:0 里设置为WB类型(值为6). 见4.4.1.3
 
