--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -173,6 +173,7 @@ EPT 页表结构**顶层**的 **PML4T 物理地址**由 EPTP(Extended Page Table
 
 - PML4T 的物理地址(host physical address)值由 EPTP 字段的 `bit N-1:12`提供(N=MAXPHYADDR). 例如, 当 MAXPHYADDR = 36 时, EPTP 的 bits 35:12 是PML4T 地址值, bits 63:36 是保留位.
 - bits
+- `bits 5:3`设置EPT页表的walk长度, 也就是访问EPT页表的级数. 这个值必须设置为3(指示需要经过4级页表的walk). EPT支持**4级EPT页表**可以从 `IA32_VMX_EPT_VPID_CAP` 寄存器bit6查询得到(参见 2.5.13 节).
 
 当 "enable EPT" 为 1 时, EPTP 值在 VM-entry 时从EPTP字段里加载, 记录在处理器内部寄存器中(推测). EPTP字段的设置必须符合设置要求(见4.4.1.3).
 
