--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -97,6 +97,7 @@ static struct kvm_memslots *kvm_alloc_memslots(void)
 ```cpp
 /* KVM Hugepage definitions for x86 */
 enum {
+        // 页面的起始地址在 页表(PT) 中
         PT_PAGE_TABLE_LEVEL   = 1,
         // 2M大页(2^20), 页面的起始地址在 页目录项(PDE) 中
         PT_DIRECTORY_LEVEL    = 2,
@@ -118,6 +119,7 @@ struct kvm_lpage_info {
 
 struct kvm_arch_memory_slot {
         // 反向映射结构（reverse map）
+        // 数组, 3个指针
         struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
         // Large page结构（如2MB、1GB大小页面）
         struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
