--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -553,7 +553,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         bool exec = error_code & PFERR_FETCH_MASK;
         bool lpage_disallowed = exec && is_nx_huge_page_enabled();
         bool map_writable;
-
+        // 物理地址右移12位得到物理页框号(相对于虚拟机而言)
         gfn_t gfn = gpa >> PAGE_SHIFT;
         unsigned long mmu_seq;
         kvm_pfn_t pfn;
@@ -561,7 +561,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 
         if (page_fault_handle_page_track(vcpu, error_code, gfn))
                 return RET_PF_EMULATE;
-
+        // 分配缓存池
         r = mmu_topup_memory_caches(vcpu);
         if (r)
                 return r;
@@ -574,10 +574,10 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 
         mmu_seq = vcpu->kvm->mmu_notifier_seq;
         smp_rmb();
-
+        /*得到PFN */
         if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
                 return RET_PF_RETRY;
-
+        // 处理反常的物理页框
         if (handle_abnormal_pfn(vcpu, is_tdp ? 0 : gpa, gfn, pfn, ACC_ALL, &r))
                 return r;
 
@@ -587,6 +587,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                 goto out_unlock;
         if (make_mmu_pages_available(vcpu) < 0)
                 goto out_unlock;
+        //修正EPT
         r = __direct_map(vcpu, gpa, write, map_writable, max_level, pfn,
                          prefault, is_tdp && lpage_disallowed);
 
